--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,8 @@ h3 {
     font-weight: normal;
     letter-spacing: .1rem;
     font-size: 2.25rem;
-    margin-bottom: 1rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
 }
 
 h4 {
@@ -64,8 +65,9 @@ h4 {
 }
 
 p {
+    font-family: 'PPRightGroteskMono-Fine', serif;
     line-height: 1.8rem;
-    font-size: 1rem;
+    font-size: 1.3rem;
     padding-right: 0 2rem 0 0;
 }
 
@@ -200,6 +202,11 @@ img {
 @font-face {
     font-family: 'PPRightGroteskMono-Regular';
     src: url('../fonts/PPRightGroteskMono-Regular.otf') format ('otf');
+}
+
+@font-face {
+    font-family: 'PPRightGroteskMono-Fine';
+    src: url('../fonts/PPRightGroteskMono-Fine.otf') format ('otf');
 }
 
 /* Awesome Serif — Regular */
@@ -391,6 +398,7 @@ img {
 }
 .bestie {
     font-size: 1.5rem;
+    font-family: 'PPRightGroteskMono-Regular';
 }
 
 .button {
