--- a/css/styles.css
+++ b/css/styles.css
@@ -190,12 +190,17 @@ footer p {
 footer ul {
   display: flex;
   justify-content: center;
+  margin-top: 2rem;
 }
 
 footer ul li {
     display: inline-block;
     padding-top: 2rem;
     padding-right: 3rem;
+}
+
+footer p {
+    font-size: 1rem;
 }
 
 img {
